--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-991CSD7\\SPORTSSTATS;Initial Catalog=SportsStatsDB;Integrated Security=True; TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-991CSD7\\SPORTSSTATS;Database=SportsStatsDB;User Id=sa;Password=Wabush#002;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
