--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --host 0.0.0.0 --port 8080",
+    "healthcheck": "node healthcheck.js",
+    "dev": "concurrently --raw \"npm run serve\" \"npm run healthcheck\"",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -13,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "serve": "^14.2.3",
     "vue": "^3.2.13",
     "vue-router": "^4.3.2"
   },
@@ -23,8 +26,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "express": "^4.19.2",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
