--- a/BackEnd/appsettings.Development.json
+++ b/BackEnd/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-991CSD7\\SPORTSSTATS;Database=SportsStatsDB;User Id=sa;Password=Wabush#002;TrustServerCertificate=True;"
+  },
+  "AllowedOrigins": [
+    "http://localhost:8080",
+    "http://localhost:8081"
+  ]
 }
+
