--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
-    "serve": "^14.2.3",
+    "express": "^4.19.2",
+    "dotenv": "^16.3.1",
+    "serve-static": "^1.14.1",
     "vue": "^3.2.13",
     "vue-router": "^4.3.2"
   },
@@ -29,7 +31,6 @@
     "concurrently": "^8.2.2",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "express": "^4.19.2",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
