--- a/BackEnd/appsettings.Production.json
+++ b/BackEnd/appsettings.Production.json
@@ -3,7 +3,18 @@
     "DefaultConnection": "Server=your-production-server;Database=SportsStatsDB;User Id=your-production-user;Password=your-production-password;TrustServerCertificate=True;"
   },
   "AllowedOrigins": [
-    "https://52.60.35.122:8080",
+    "https://sportingstats.ca:8080",
     "https://sportingstats.ca"
-  ]
+  ],
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://*:5001",
+        "Certificate": {
+          "Path": "/etc/nginx/ssl/fullchain.pem",
+          "KeyPath": "/etc/nginx/ssl/privkey.pem"
+        }
+      }
+    }
+  }
 }
