--- a/nginx.conf
+++ b/nginx.conf
@@ -11,10 +11,11 @@ http {
     default_type application/octet-stream;
     sendfile on;
     keepalive_timeout 65;
-
+	server_tokens off;
+	
     server {
         listen 80;
-        server_name sportingstats.ca;
+        server_name sportingstats.ca www.sportingstats.ca;
 
         # Redirect HTTP to HTTPS
         return 301 https://$host$request_uri;
@@ -22,11 +23,28 @@ http {
 
     server {
         listen 443 ssl;
-        server_name sportingstats.ca;
+        server_name sportingstats.ca www.sportingstats.ca;
 
-        ssl_certificate /etc/nginx/ssl/selfsigned.crt;
-        ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
+		ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 		
+		ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-RSA-AES256-SHA';
+        ssl_prefer_server_ciphers on;
+		ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+		
+		add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
+        add_header X-Frame-Options DENY;
+        add_header X-Content-Type-Options nosniff;
+		add_header Content-Security-Policy "default-src 'self'; 
+											style-src 'self' 'unsafe-inline'; 
+											script-src 'self' 'unsafe-inline'; 
+											connect-src 'self' https://sportingstats.ca:5001;
+											img-src 'self' https://a.espncdn.com https://www.mlbstatic.com https://cdn.nba.com data:;";
+		add_header Referrer-Policy "no-referrer" always;
+	
         location / {
             proxy_pass http://frontend:8080;
             proxy_set_header Host $host;
@@ -35,12 +53,30 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+		location /images/ {
+			alias /usr/share/nginx/html/public/images/;
+			expires 30d;
+			add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+		}
+		
         location /api {
-            proxy_pass http://backend:5000;
+            proxy_pass http://backend:5001;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+			
+			# CORS headers
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+                return 204;
+            }
+
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
         }
 
         location /health {
@@ -50,5 +86,12 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+		
+		error_page 404 /404.html;
+		error_page 500 502 503 504 /50x.html;
+
+		location = /50x.html {
+			root /usr/share/nginx/html;
+		}
     }
 }
