--- a/BackEnd/Properties/launchSettings.json
+++ b/BackEnd/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7049;http://localhost:5082",
+      "applicationUrl": "https://localhost:7049;https://localhost:5082",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
