--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,12 @@ services:
       context: .
       dockerfile: BackEnd/Dockerfile
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Production
     ports:
       - "5000:5000"
       - "5001:5001"
     volumes:
-      - ./certs:/https/ssl/certs
-      - ./certs:/https/ssl/private
-      
+      - ./certs:/etc/nginx/ssl
     networks:
       - sportingstats-network
 
@@ -22,13 +20,15 @@ services:
       context: .
       dockerfile: FrontEnd/Dockerfile
       args:
-        - VUE_APP_BACKEND_URL=https://localhost:5000
+        - VUE_APP_BACKEND_URL=https://sportingstats.ca:5001
     environment:
-      - NODE_ENV=development
-      - VUE_APP_BACKEND_URL=https://localhost:5000
+      - NODE_ENV=production
+      - VUE_APP_BACKEND_URL=https://sportingstats.ca:5001
     ports:
       - "8080:8080"
       - "3001:3001"
+    volumes:
+      - ./FrontEnd/public/images:/usr/share/nginx/html/public/images
     networks:
       - sportingstats-network
 
@@ -41,6 +41,8 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./certs:/etc/nginx/ssl
+      - ./FrontEnd/public/images:/usr/share/nginx/html/public/images
+      - ./dhparam.pem:/etc/nginx/ssl/dhparam.pem  # Map dhparam.pem file
       
     depends_on:
       - frontend
