adding local dockerfile and docker-compose.dev.yml files

--- a/BackEnd/appsettings.Development.json
+++ b/BackEnd/appsettings.Development.json
@@ -3,8 +3,14 @@
     "DefaultConnection": "Server=DESKTOP-991CSD7\\SPORTSSTATS;Database=SportsStatsDB;User Id=sa;Password=Wabush#002;TrustServerCertificate=True;"
   },
   "AllowedOrigins": [
-    "https://localhost",
-    "https://localhost5000"
-  ]
+    "http://localhost",
+    "http://localhost:5000"
+  ],
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5000"
+      }
+    }
+  }
 }
-
