--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -9,19 +9,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://*:5000"
-      },
-      "Https": {
-        "Url": "https://*:5001",
-        "Certificate": {
-          "Path": "/https/ssl/certs/cert.pem",
-          "KeyPath": "/https/ssl/private/key.pem"
-        }
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
