--- a/BackEnd/appsettings.Production.json
+++ b/BackEnd/appsettings.Production.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=your-production-server;Database=SportsStatsDB;User Id=your-production-user;Password=your-production-password;TrustServerCertificate=True;"
-  },
   "AllowedOrigins": [
     "https://sportingstats.ca:8080",
     "https://sportingstats.ca"
@@ -11,8 +8,8 @@
       "Https": {
         "Url": "https://*:5001",
         "Certificate": {
-          "Path": "/etc/nginx/ssl/fullchain.pem",
-          "KeyPath": "/etc/nginx/ssl/privkey.pem"
+          "Path": "/etc/nginx/ssl/sportingstats.ca/fullchain1.pem",
+          "KeyPath": "/etc/nginx/ssl/sportingstats.ca/privkey1.pem"
         }
       }
     }
