--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -1,12 +1,10 @@
 {
-  "AppSettings": {
-    "ApiKey": "9e673511f7mshf50a8bb66cecc6cp10c387jsn2542bfbedbf6"
-
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "AllowedHosts": "*"
