--- a/nginx.conf
+++ b/nginx.conf
@@ -25,8 +25,8 @@ http {
         listen 443 ssl;
         server_name sportingstats.ca www.sportingstats.ca;
 
-		ssl_certificate /etc/nginx/ssl/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+		ssl_certificate /etc/nginx/ssl/sportingstats.ca/fullchain1.pem;
+        ssl_certificate_key /etc/nginx/ssl/sportingstats.ca/privkey1.pem;
 		
 		ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-RSA-AES256-SHA';
