--- a/nginx.dev.conf
+++ b/nginx.dev.conf
@@ -44,12 +44,14 @@ http {
 			# CORS headers
 
             add_header 'Access-Control-Allow-Origin' 'http://localhost:8080' always;
+			add_header 'Access-Control-Allow-Origin' 'http://127.0.0.1:8080' always;
 			add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
 			add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
     
 			# Handle preflight requests
 			if ($request_method = 'OPTIONS') {
 				add_header 'Access-Control-Allow-Origin' 'http://localhost:8080' always;
+				add_header 'Access-Control-Allow-Origin' 'http://127.0.0.1:8080' always;
 				add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
 				add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
 				add_header 'Access-Control-Max-Age' 1728000;
@@ -57,6 +59,31 @@ http {
             }
         }
 
+		# Specific API route for login (/api/auth)
+        location /api/auth {
+            proxy_pass http://backend:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # CORS headers (you can keep these the same as the /api block)
+            add_header 'Access-Control-Allow-Origin' 'http://localhost:8080' always;
+            add_header 'Access-Control-Allow-Origin' 'http://127.0.0.1:8080' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+
+            # Handle preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:8080' always;
+                add_header 'Access-Control-Allow-Origin' 'http://127.0.0.1:8080' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+                add_header 'Access-Control-Max-Age' 1728000;
+                return 204;
+            }
+        }
+		
         location /health {
             proxy_pass http://frontend:3001/health;
             proxy_set_header Host $host;
